<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thymaster.five_views.MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:id="@+id/Layout1"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid"
        android:id="@+id/Layout2"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hori"
        android:id="@+id/Layout3"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rela"
        android:id="@+id/Layout4"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />
</LinearLayout>